--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -1,7 +1,3 @@
-.container {
-	
-	
-}
 .header {
 	margin: 32px auto 0 auto;
 	max-width: 1180px;
@@ -64,4 +60,73 @@
 .main {
 	margin: 56px auto 0 auto;
 	max-width: 1170px;
+}
+
+.hotTopics {
+	min-height: 480px;
+}
+
+.hotTopics__title {
+	font-family: 'Roboto';
+	font-style: normal;
+	font-weight: 700;
+	font-size: 48px;
+	color: #121221;
+}
+
+.topicItem {
+	position: relative;
+	display: flex;
+	height: 400px;
+}
+
+.topicItem__left {
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-end;
+	padding: 32px 32px;
+	width: 870px;
+}
+
+.topicItem__timeAndSource {
+	display: flex;
+	font-family: 'Roboto';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 12px;
+	color: #F8F8F8;
+}
+
+.topicItem__img {
+	position: absolute;
+	left: 0;
+	top: 0;
+	z-index: -999;
+	height: 100%;
+	border-radius: 8px;
+}
+
+.topicItem__title {
+	font-family: 'Playfair Display';
+	font-style: normal;
+	font-weight: 700;
+	font-size: 32px;
+	line-height: 150%;
+	color: #F8F8F8;
+	max-width: 543px;
+}
+
+.topicItem__text {
+	padding-left: 30px;
+	width: 270px;
+	font-family: 'Playfair Display';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 18px;
+	line-height: 180%;
+	color: #444444;
+}
+
+.topicItem__text span{
+	font-size: 36px;
 }
