--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -1,62 +1,3 @@
-.header {
-	margin: 32px auto 0 auto;
-	max-width: 1180px;
-	position: relative;
-	height: 37px;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-}
-
-.header__logo {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	width: 103px;
-	height: 21px;	
-	font-family: 'Playfair Display';
-	font-style: normal;
-	font-weight: 700;
-	font-size: 16px;
-	line-height: 21px;
-	color: black;
-}
-
-.header__logo__scqr {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	width: 56px;
-	height: 37px;
-	background: #121221;
-	border-radius: 4px;
-	color: #F8F8F8;
-}
-
-.header__rightSide {
-	display: flex;
-}
-
-.header__search {
-	cursor: pointer;
-	margin: 0 32px 0 0;
-}
-
-.header__burger {
-	cursor: pointer;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	width: 22.97px;
-	height: 20.72px;
-}
-
-.header__burger div {
-	height: 2px;
-	width: 22.97px;
-	background: #000000;
-}
-
 .main {
 	margin: 56px auto 0 auto;
 	max-width: 1170px;
@@ -88,13 +29,21 @@
 	width: 870px;
 }
 
-.topicItem__timeAndSource {
+.timeAndSource {
 	display: flex;
 	font-family: 'Roboto';
 	font-style: normal;
 	font-weight: 400;
 	font-size: 12px;
 	color: #F8F8F8;
+}
+
+.timeAndSource__source {
+	padding-left: 27px;
+}
+
+.timeAndSource_grey {
+	color: #949494;
 }
 
 .topicItem__img {
@@ -113,7 +62,7 @@
 	font-size: 32px;
 	line-height: 150%;
 	color: #F8F8F8;
-	max-width: 543px;
+	max-width: 510px;
 }
 
 .topicItem__text {
@@ -122,8 +71,13 @@
 	font-family: 'Playfair Display';
 	font-style: normal;
 	font-weight: 400;
-	font-size: 18px;
+	font-size: 19px;
 	line-height: 180%;
+	color: #444444;
+}
+
+.topicItem__text a {
+	text-decoration: none;
 	color: #444444;
 }
 
