--- a/src/components/appHeader/AppHeader.css
+++ b/src/components/appHeader/AppHeader.css
@@ -1,5 +1,6 @@
 .header {
-	margin: 32px auto 0 auto;
+	padding-top: 32px;
+	margin: 0 auto 0 auto;
 	max-width: 1180px;
 	position: relative;
 	height: 37px;
