--- a/src/components/appHeader/AppHeader.css
+++ b/src/components/appHeader/AppHeader.css
@@ -40,11 +40,29 @@
 
 .header__search {
 	cursor: pointer;
+	display: flex;
 	margin: 0 32px 0 0;
+}
+
+.header__input {
+	/* display: none; */
+	margin-right: 10px;
+	border-radius: 8px;
+	padding: 0 8px 0 8px;
+	height: 25px;
+}
+
+.show {
+	display: block;
+}
+
+.hide {
+	display: none;
 }
 
 .header__burger {
 	cursor: pointer;
+	margin: auto 0;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
