--- a/src/components/singlePage/SinglePage.css
+++ b/src/components/singlePage/SinglePage.css
@@ -7,7 +7,9 @@
 	position: absolute;
 	height: 200px;
 	width: 300px;
-	object-fit: cover;
+	/* object-fit: cover; */
+	object-fit: contain;
+	background-color: black;
 	border-radius: 8px;
 }
 
