--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -36,6 +36,25 @@ a {
 	.header {
 		max-width: 400px;
 		padding-top: 10px;
+		height: 70px;
+		align-items: start;
+	}
+	.header .header__logo {
+		margin-top: 10px;
+		width: 70px;
+		font-size: 12px;
+	}
+	.header .header__rightSide {
+		margin-top: 10px;
+		flex-direction: column-reverse;
+		align-items: end;
+	}
+	.header .header__search {
+		width: 100%;
+		margin: 16px 0 0 0;
+	}
+	.header .header__input {
+		width: 156px;
 	}
 	.main {
 		max-width: 400px;
@@ -47,7 +66,7 @@ a {
 		height: 270px;
 	}
 	.main .latestNews{
-		padding: 65px 0 0px 0;
+		padding: 65px 0 120px 0;
 	}
 	.main .hotTopics {
 		min-height: 270px;
